# PICASSO

./: .gitattributes  .gitignore  README.md  pyproject.toml  pyseq_util.py  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
.napari-hub/: config.yaml
docs/: conf.py  index.rst
notebooks/: GUI.ipynb  InformationBottleneck.ipynb  MINE.ipynb  PICASSO BOTORCH.ipynb  PICASSO_NN.ipynb  PICASSOnn.ipynb  demo.ipynb  newGUI.ipynb  unmixing_example.ipynb
notebooks/.ipynb_checkpoints/: GUI-checkpoint.ipynb  InformationBottleneck-checkpoint.ipynb  MINE-checkpoint.ipynb  PICASSO_NN-checkpoint.ipynb  PICASSOnn-checkpoint.ipynb
picasso/: mine.py  nn_picasso.py  picasso.py
sample_data/: GFAP_sink.tiff  LMNB1_source.tiff  mouse_spinalcord_small.tiff
scripts/: test.py  worker_bug.py
src/: __init__.py  util.py
src/mine/: __init__.py  mine.py
src/napari-picasso/: napari.yaml  napari_picasso.py  widgets.py
src/napari-picasso/_tests/: test_widget.py
src/napari_picasso/: __init__.py  main_widget.py  napari.yaml  napari_picasso.py  options_widget.py  sink_widget.py  source_widget.py  utils.py  widgets.py
src/napari_picasso/_tests/: test_widget.py
src/picasso/: __init__.py  nn_picasso.py  utils.py
src/picasso/_tests/: test_picasso.py
