[metadata]
name = napari-PICASSO
author = Kunal Pandit
author_email = kpandit@nygenome.org
url = https://github.com/nygctech/PICASSO
license = GPL-3.0-only
description = Blind fluorescence unmixing
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src
setup_requires = setuptools_scm
install_requires =
    numpy
    magicgui
    qtpy
    dask
    psutil
    #torch
    #napari

[options.extras_require]
testing =
    tox
    napari[all]
    torch
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/


[options.packages.find]
where = src

[options.package_data]
* = *.yaml
picasso = sample_data/*

[options.entry_points]
napari.manifest =
    napari-picasso = napari_picasso:napari.yaml
